<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/searchTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Rechercher des offres"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <Spinner
        android:id="@+id/jobTargetSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/select_job_target"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/locationSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/select_location"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/periodSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/select_period"
        android:layout_marginBottom="8dp"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/myOffersOnlyCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_offers_only"
        android:layout_marginBottom="16dp"
        app:buttonTint="@color/primaryColor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        app:cornerRadius="20dp"
        app:backgroundTint="@color/primaryColor" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSearchResults"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
